--- a/style.css
+++ b/style.css
@@ -107,26 +107,24 @@ header {
 }
 
 .main-menu {
-    float:right;
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center; 
+    padding:40px 20px; 
 }
 
-.main-menu li {    
-    color:white;
-    display:inline-block;
-    padding-right:25px;
-    white-space: nowrap;
-    vertical-align: top;    
+.main-menu a {    
+    color:white; 
+    padding:0px 25px; 
+    text-decoration: none;
+    font-size: 18px;
 }
 
-.main-menu li:last-child {
+.main-menu:last-child {
      padding-right:0;
 }
 
-.main-menu a {
-    color:white;
-    display:inline-block;
-    padding:40px 15px;    
-}
 
 .main-menu a:hover {
     -webkit-transform: scale(1.5,1.5);
@@ -173,7 +171,15 @@ header {
     margin-right:30px;
 }
 
-.serv img {
+.serv-1 {
+    margin-left:18px;
+}
+
+.serv-3 {
+    margin-right:-18px;
+}
+
+.serv .serv-img {
     display: inline-block;
     width: 90px;
     height: 90px;
@@ -378,14 +384,16 @@ header {
     overflow: hidden;
 }
 
-.works-menu li {   
-    display:inline-block;
+.works-menu {   
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     padding-right:15px;
-    white-space: nowrap;
-    vertical-align: top;    
+     
 }
 
-.works-menu li:last-child {
+.works-menu a:last-child {
      padding-right:0;
 }
 
@@ -395,7 +403,8 @@ header {
     line-height: 24px;
     color:#555555;
     display:inline-block;
-    padding: 30px 15px 70px 0;
+    padding: 30px 35px 70px 0;
+    text-decoration: none;
 }
 
 .works-menu a:hover {
@@ -609,7 +618,8 @@ header {
     background: #c0301c url('img/post-img-1.jpg') no-repeat;
 }
 
-.post img {
+.post .post-img-1
+{
     width:460px;
     float:left;    
 }
@@ -678,14 +688,20 @@ header {
     }
 
 .clients ul li {
-    display:inline-block;
-    vertical-align: middle;
-    margin-right: 60px;
-    margin-top:90px;
-    margin-bottom:60px;
+    list-style: none;   
 }
 
-.clients ul:first-child li:hover {    
+.clients ul li a {  
+    float:left;
+    display: block;
+    margin:60px 40px 30px;    
+}
+
+.clients ul li:first-child {  
+    margin-left: 300px;     
+}
+
+.clients ul:first-child a:hover {    
     -webkit-transform: scale(1.5,1.5);
     -webkit-transition-timing-function: ease-out;
     -webkit-transition-duration: 550ms;
@@ -694,36 +710,41 @@ header {
     -moz-transition-duration: 550ms;
 }
 
-
-
-.clients ul a .client-1 {
+.clients .client-1 {
     width: 141px;
     height: 27px;
     background: url('img/client1.png') no-repeat;    
 }
 
-.clients ul a .client-2 {
+.clients .client-2 {
     width: 121px;
     height: 49px;
-    background: url('img/client2.png') no-repeat;    
+    background: url('img/client2.png') no-repeat;  
+    margin-top:45px;
 }
 
-.clients ul a .client-3 {
+.clients .client-3 {
     width: 142px;
     height: 17px;
     background: url('img/client3.png') no-repeat;    
 }
 
-.clients ul a .client-4 {
+.clients .client-4 {
     width: 109px;
     height: 21px;
-    background: url('img/client4.png') no-repeat;    
+    background: url('img/client4.png') no-repeat;   
+    margin-top:56px;
 }
 
-.clients ul a .client-5 {
+.clients .client-5 {
     width: 123px;
     height: 46px;
     background: url('img/client5.png') no-repeat;    
+    margin-top:45px;
+}
+
+.clients .cont-btn {
+    margin:0 auto 30px;
 }
 
 .clients .feedback p {
@@ -731,8 +752,7 @@ header {
     font-size:18px;
     line-height: 30px;
     font-style: italic;
-    margin-bottom:30px; 
-    
+    margin-bottom:30px;     
 }
 
 .clients .feedback span {
@@ -787,7 +807,7 @@ header {
     width: 15px;
     height: 25px;
     background: url('img/contacts.png') no-repeat;  
-    background-position: 0 5px; 
+    background-position: 0 8px; 
     padding-right: 10px;
 }
 
@@ -797,7 +817,7 @@ header {
     width: 15px;
     height: 25px;
     background: url('img/contacts.png') no-repeat;  
-    background-position: 0 -95px; 
+    background-position: 0 -94px; 
     padding-right: 10px;
 }
 
@@ -807,7 +827,7 @@ header {
     width: 15px;
     height: 25px;
     background: url('img/contacts.png') no-repeat;  
-    background-position: 0 -186px;  
+    background-position: 0 -187px;  
     padding-right: 10px;
 }
 
@@ -940,7 +960,7 @@ footer .line {
 /*SLIDER begin*/
 #slides {
  position: relative;
- height: 300px;
+ min-height: 200px;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
@@ -1004,5 +1024,38 @@ footer .line {
 
 /*SLIDER end*/
 
+.go-up {
+    position:fixed;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    right:30px;
+    bottom:30px;
+    background-color: #C46556;
+    color:white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 33px;
+    line-height: 70px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.8);
+    z-index: 3;
+}
 
+.go-up:hover {
+    -webkit-transform: scale(1.2,1.2);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 300ms;
+    -moz-transform: scale(1.2,1.2);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 300ms; 
+}
 
+.arrow {
+    border: solid white;
+    border-width: 0 9px 9px 0;
+    display: inline-block;
+    padding: 10px;
+    margin-top:25px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
