--- a/style.css
+++ b/style.css
@@ -1049,6 +1049,8 @@ footer .line {
 
 /*SLIDER end*/
 
+
+/*
 .go-up {
     position:fixed;
     width: 70px;
@@ -1084,3 +1086,6 @@ footer .line {
     transform: rotate(-135deg);
     -webkit-transform: rotate(-135deg);
 }
+
+
+*/
