--- a/media.css
+++ b/media.css
@@ -1,5 +1,3 @@
-/************************************************/
-
 /*Tablet*/
 @media (min-width: 700px) and (max-width: 1200px) {
 	h1 {
@@ -19,8 +17,8 @@
 	}
 	
 	.all-members .member {
-	   width: 400px;	   
-}
+	    width: 400px;	   
+	}
 	
 	.member-overlay {
 		display: none;
@@ -38,36 +36,44 @@
 	}
 }
 
-
-/*-------------------------------*/
-
 /*Mobile*/
-@media (max-width: 699px) {
+@media (max-width: 699px) {	
+	header {
+		height: 600px ;
+		overflow: hidden;	
+	}	
+	
+	.header-img {
+		height: 600px;	
+	}
+
+	.promo-text-1 { 
+		padding-top: 80px;
+	}
+	
 	.main-menu a {
 		padding: 10 px 20px;
 	}
 	
 	.all-serv {
-	display: flex;
+		display: flex;
 		flex-direction:  column;
-	justify-content: center;
-		
-}
-
-
-.serv {
-	width: 100%;
-	padding: 0;
-	margin: 0;
+		justify-content: center;		
+	}
+	
+	.serv {
+		width: 100%;
+		padding: 0;
+		margin: 0;
 	}
 	
 	h1 {
-	font-size: 26px;
+		font-size: 26px;
 	}
 	
 	h2 {
-	font-size: 20px;
-		padding: 0 20px;
+		font-size: 20px;
+		padding: 10px 20px;
 	}
 	
 	h3 {
@@ -75,20 +81,33 @@
 		padding: 0 20px;
 	}
 	
-	 p {
+	p {
 		font-size: 12px !important;
 	}
 	
+	.about .column {
+		flex-direction: column;
+		justify-content: center
+	}
+	
+	.about .column p {
+		width: 90%;
+		margin-right: 30px;
+	}
+	
+	.column-left, .column-right {
+		margin: 0 20px;
+	}
+	
 	.all-members .member {
-	   width: 80%;	
+	    width: 80%;	
 		margin: 0;
 		padding: 0;
-}
+	}
 	
 	.member-overlay {
 		display: none;
-	}
-	
+	}	
 		
 	.member-social {
 		display: none;
@@ -96,12 +115,11 @@
 	}
 	
 	.works-menu {
-	width: 100%;
-    display: flex;
-    justify-content: center;
-	flex-wrap: wrap;
-
-}
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+	}
 	
 	.works-menu li a {
 		font-size: 18px;
@@ -125,21 +143,18 @@
 	}
 	
 	.clients ul {
-	display: flex;
-	justify-content: space-around;
-	flex-wrap:wrap;	
-}
+		display: flex;
+		justify-content: space-around;
+		flex-wrap:wrap;	
+	}
 	
-		.clients ul li {
-	margin: 20px;
-}
-	
-
+	.clients ul li {
+		margin: 20px;
+	}
 	
 	.contacts {
 		width: 80%;		
-	}
-	
+	}	
 	
 	.form {
 		display: none;
@@ -159,7 +174,6 @@
 	}
 }
 
-
 @media (max-width: 1000px)  {
 	.main-menu {
 		width: 100%;
@@ -172,4 +186,26 @@
 	.main-menu a {
 		padding: 10px 20px;
 	}	
+}
+
+@media (min-width:360px) and (max-width: 700px) {
+	.work .work-overlay {
+		left: -50px;
+	}
+	
+	.work h2,
+	.work span,
+	.work a 	{
+		left: 30px;		
+	}	
+}
+
+@media (max-width: 460px) {
+	header b {
+		font-size: 35px !important;
+	}
+	.works-menu li a {
+		font-size: 14px;
+		padding: 10px 0;		
+	}
 }
