--- a/media.css
+++ b/media.css
@@ -170,7 +170,11 @@
 	}
 	
 	.copyright {
-		font-size: 20px;
+		font-size: 14px;
+	}	
+	
+	.promo-touch p {
+		font-size: 22px !important;
 	}
 }
 
